--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    scripts
+    <div class="app" id="app"><h1>{{message}}</h1></div>
+    <script>
+        const app=Vue.createApp({
+            data(){
+                return{
+                    message:"afdfdfdsfd"
+                }
+            }
+        })
+        app.mount("#app")
+    </script>
     
 </body>
 </html>
